tests/NormalTests/paczka1/fuzzy1/30126542.err
Error in line 4: opGWRhOD S71 2,4
Error in line 5: pWb563y S837 12,4
Error in line 22: pWb563y S919 85,0
Error in line 21: dBzqK1yR A789 91,0
Error in line 28: dBzqK1yR S837 38,9
Error in line 24: tcrgzf2dush S837 56,4
Error in line 35: 7m83 A789 70,3
Error in line 38: tcrgzf2dush S71 8,58
